fleet-examples/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx-app
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
